--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "bitbucket-cli",
   "module": "index.ts",
   "type": "module",
+  "scripts": {
+    "clone": "bun run index.ts clone",
+    "pipeline:retry": "bun run index.ts run-pipeline",
+    "pipeline:create": "bun run index.ts create-pipeline"
+  },
   "devDependencies": {
     "@types/bun": "latest",
     "@types/inquirer-autocomplete-prompt": "^3.0.3"
@@ -14,6 +19,8 @@
     "fuse.js": "^7.0.0",
     "inquirer": "8",
     "inquirer-autocomplete-prompt": "^3.0.1",
-    "simple-git": "^3.27.0"
+    "ora": "^8.1.0",
+    "simple-git": "^3.27.0",
+    "winston": "^3.15.0"
   }
 }
